"""Package purpose: Nemotron-3 Nano Omni 30B inference job manifests and service exports."""

package(default_visibility = ["//visibility:private"])

filegroup(
    name = "nemotron_3_nano_omni_30b_job",
    srcs = [
        "kustomization.yaml",
        "nemotron-3-nano-omni-30b-job.yaml",
        "service.yaml",
    ],
    visibility = [
        "//k8s:__subpackages__",
        "//lints:__pkg__",
        "//scripts:__pkg__",
        "//tests:__pkg__",
    ],
)

exports_files([
    "kustomization.yaml",
    "nemotron-3-nano-omni-30b-job.yaml",
    "service.yaml",
])
