"""Package purpose: Nemotron-3 Ultra inference job manifests and service exports."""

package(default_visibility = ["//visibility:private"])

filegroup(
    name = "nemotron_job",
    srcs = [
        "kustomization.yaml",
        "nemotron-3-ultra-job.yaml",
        "service.yaml",
    ],
    visibility = [
        "//k8s:__subpackages__",
        "//lints:__pkg__",
        "//scripts:__pkg__",
        "//tests:__pkg__",
    ],
)

exports_files([
    "kustomization.yaml",
    "nemotron-3-ultra-job.yaml",
    "service.yaml",
])
