"""Package purpose: Nemotron Retriever embed deployment manifests and service exports."""

package(default_visibility = ["//visibility:private"])

filegroup(
    name = "nemotron_retriever_embed_deployment",
    srcs = [
        "kustomization.yaml",
        "nemotron-retriever-embed-deployment.yaml",
        "service.yaml",
    ],
    visibility = [
        "//k8s:__subpackages__",
        "//lints:__pkg__",
        "//scripts:__pkg__",
        "//tests:__pkg__",
    ],
)

exports_files([
    "kustomization.yaml",
    "nemotron-retriever-embed-deployment.yaml",
    "service.yaml",
])
