"""Package purpose: Nemotron speech ASR deployment manifests and service exports."""

package(default_visibility = ["//visibility:private"])

filegroup(
    name = "nemotron_speech_asr_deployment",
    srcs = [
        "kustomization.yaml",
        "nemotron-speech-asr-deployment.yaml",
        "service.yaml",
    ],
    visibility = [
        "//k8s:__subpackages__",
        "//lints:__pkg__",
        "//scripts:__pkg__",
        "//tests:__pkg__",
    ],
)

exports_files([
    "kustomization.yaml",
    "nemotron-speech-asr-deployment.yaml",
    "service.yaml",
])
